product/k8s/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: product 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: product 
  template:
    metadata:
      labels:
        app: product
    spec:
      volumes:
      - name: google-cloud-key  # use secret we just create in gke, and in this secrt, its contains service accout key we generated
        secret:
          secretName: pubsub-key
      - name: csv-volume
        emptyDir: {} # An emptyDir volume for temporary storage
      containers:
      - name: product
        image: asia-east1-docker.pkg.dev/ikala-cloud-swe-dev-sandbox/ann-test/product:v30
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/secrets/google
          name: google-cloud-key
        - mountPath: /cache
          name: csv-volume
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
          requests:
            memory: "5Mi"
            cpu: "5m"
