product/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: NodePort
  selector:
    app: product
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
